# localtoolkit

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements-dev.txt
docs/: README.md  core-concepts.md  development.md  integration-patterns.md  performance-optimizations.md  testing.md
docs/apps/: applescript.md  calendar.md  contacts.md  filesystem.md  mail.md  messages.md  notes.md  process.md  reminders.md
src/localtoolkit/: __init__.py
src/localtoolkit/applescript/: __init__.py  run_code.py
src/localtoolkit/calendar/: __init__.py  create_event.py  list_calendars.py  list_events.py
src/localtoolkit/cli/: __init__.py  main.py  run.py
src/localtoolkit/contacts/: __init__.py  search_by_name.py  search_by_phone.py
src/localtoolkit/filesystem/: __init__.py  list_directory.py  read_file.py  write_file.py
src/localtoolkit/mail/: __init__.py  draft_mail.py  send_mail.py
src/localtoolkit/mcp/: __init__.py
src/localtoolkit/messages/: __init__.py  get_messages.py  list_conversations.py  send_message.py
src/localtoolkit/notes/: __init__.py  create_note.py  get_note.py  list_notes.py  update_note.py
src/localtoolkit/process/: __init__.py  get_process_info.py  list_processes.py  monitor_process.py  start_process.py  terminate_process.py
src/localtoolkit/reminders/: __init__.py  complete_reminder.py  create_reminder.py  create_reminder_list.py  delete_reminder.py  list_reminder_lists.py  list_reminders.py  update_reminder.py
tests/: conftest.py  test_simple.py
tests/localtoolkit/applescript/: conftest.py  test_applescript_runner.py  test_run_code.py
tests/localtoolkit/cal/: __init__.py  conftest.py  test_calendar_utils.py  test_create_event.py  test_list_calendars.py  test_list_events.py
tests/localtoolkit/cli/: __init__.py  (+3 more)
tests/utils/: assertions.py  generators.py  helpers.py  mocks.py
(+49 files in other folders)
